<package>
  <name>duckie_lab</name>
  <version>0.1.0</version>
  <description>
  This package provides ros templates to implement the differential steering odometry
  and a pid controller
  </description>
  <maintainer email="florian.herzog@hslu.ch">Florian Herzog</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>duckietown_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>python-numpy</run_depend>
  <run_depend>python-opencv</run_depend>  
  <run_depend>duckietown_msgs</run_depend>
   <run_depend>rospy</run_depend>
</package>


